--- a/rails_generators/nifty_scaffold/templates/views/haml/_form.html.haml
+++ b/rails_generators/nifty_scaffold/templates/views/haml/_form.html.haml
@@ -4,7 +4,13 @@
   %p
     = f.label :<%= attribute.name %>
     %br
-    = f.<%= attribute.field_type %> :<%= attribute.name %>
+    <%- if  attribute.field_type.to_s.eql? "calendar_date_select" -%> 
+      = f.calendar_date_select :<%= attribute.name %>, :embedded => false, :popup => 'force'
+    <%- elsif  attribute.field_type.to_s.eql? "select" -%>
+      = f.select :<%= attribute.name %>, <%= attribute.name.split("_").first.capitalize %>.all.collect { |p| p.id , p.name }, :include_blank => true 
+    <%- else -%>
+      = f.<%= attribute.field_type %> :<%= attribute.name %>
+    <%- end -%>
   <%- end -%>
   %p
     = f.submit "Submit"
